force-app/main/default/objects/CampaignMember/fields/ADR_Role_Copy__c.field-meta.xml
<CustomField>
    <fullName>ADR_Role_Copy__c</fullName>
    <label>ADR Role Copy</label>
    <length>250</length>
    <type>Text</type>
</CustomField>