force-app/main/default/objects/CampaignMember/fields/ADR_Transfer_By__c.field-meta.xml
<CustomField>
    <fullName>ADR_Transfer_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADR Transfer By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>