force-app/main/default/objects/CampaignMember/fields/Campaign_Interaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Interaction_Date__c</fullName>
    <inlineHelpText>When campaign member responded = true, the value of this field is automatically updated with new date/time to reflect response date. This value is used in calculating attribution</inlineHelpText>
    <label>Campaign Interaction Date</label>
    <type>DateTime</type>
</CustomField>