force-app/main/default/objects/CampaignMember/fields/Campaign_Member_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Age_Days__c</fullName>
    <description>Calculates number of days since campaign interaction date. Excludes weekends</description>
    <formula>(5 * ( FLOOR( ( TODAY()+1 - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( TODAY()+1 - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( ( FirstRespondedDate - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( FirstRespondedDate - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <inlineHelpText>Calculates number of days since campaign interaction date. Excludes weekends (Kiriti)</inlineHelpText>
    <label>Campaign Member Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>