force-app/main/default/objects/CampaignMember/fields/experimentId__c.field-meta.xml
<CustomField>
    <fullName>experimentId__c</fullName>
    <inlineHelpText>This field is used for Optimizely mapping for experiments run by the Growth team</inlineHelpText>
    <label>experimentId</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>