force-app/main/default/objects/CampaignMember/fields/Facebook_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Click_ID__c</fullName>
    <label>Facebook Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>