force-app/main/default/objects/CampaignMember/fields/Google_GCLIDv2__c.field-meta.xml
<CustomField>
    <fullName>Google_GCLIDv2__c</fullName>
    <label>Google GCLID</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>