force-app/main/default/objects/CampaignMember/fields/Growth_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Growth_Campaign__c</fullName>
    <formula>Campaign.Growth_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth Campaign</label>
    <type>Checkbox</type>
</CustomField>