force-app/main/default/objects/CampaignMember/fields/Inbound_ADR_Toggle_Status__c.field-meta.xml
<CustomField>
    <fullName>Inbound_ADR_Toggle_Status__c</fullName>
    <description>Marks value of Inbound ADR toggle status the moment they received an inbound lead</description>
    <inlineHelpText>Marks value of Inbound ADR toggle status the moment they received an inbound lead</inlineHelpText>
    <label>Inbound ADR Toggle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>