force-app/main/default/objects/CampaignMember/fields/Lead_Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Follow_Up_Status__c</fullName>
    <description>Created as per GTMS-18101</description>
    <label>Lead Follow-Up Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Routed</fullName>
            </value>
            <value>
                <fullName>Attempted</fullName>
            </value>
            <value>
                <fullName>Followed Up</fullName>
            </value>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>No Follow-up Required</fullName>
            </value>
            <value>
                <fullName>Attempted: Missed SLA</fullName>
            </value>
            <value>
                <fullName>Attempted: Met SLA</fullName>
            </value>
            <value>
                <fullName>Missed SLA</fullName>
            </value>
            <value>
                <fullName>Connected: Missed SLA</fullName>
            </value>
            <value>
                <fullName>Connected: Met SLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>