force-app/main/default/objects/CampaignMember/fields/Lead_Funnel_Assignment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_Funnel_Assignment_Date_Time__c</fullName>
    <inlineHelpText>Field used to track the date and time which the account was assigned</inlineHelpText>
    <label>Lead Funnel Assignment Date/Time</label>
    <type>DateTime</type>
</CustomField>