force-app/main/default/objects/CampaignMember/fields/Lead_Funnel_Trigger_Start__c.field-meta.xml
<CustomField>
    <fullName>Lead_Funnel_Trigger_Start__c</fullName>
    <inlineHelpText>Used to track TOFU lead insertion metrics</inlineHelpText>
    <label>Lead Funnel Trigger Start</label>
    <type>DateTime</type>
</CustomField>