force-app/main/default/objects/CampaignMember/fields/Lead_Score_Copy__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Copy__c</fullName>
    <description>This field is created upon the request of GTMS-24448</description>
    <label>Lead Score (Copy)</label>
    <length>15</length>
    <type>Text</type>
</CustomField>