force-app/main/default/objects/CampaignMember/fields/Lead_Score_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Explanation__c</fullName>
    <label>Lead Score Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>