force-app/main/default/objects/CampaignMember/fields/Lead_Suppression__c.field-meta.xml
<CustomField>
    <fullName>Lead_Suppression__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Suppression</label>
    <type>Checkbox</type>
</CustomField>