force-app/main/default/objects/CampaignMember/fields/Lead_Tier__c.field-meta.xml
<CustomField>
    <fullName>Lead_Tier__c</fullName>
    <label>Lead Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Tiered</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>Tier 1</fullName>
                <isActive>false</isActive>
                <label>Tier 1</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
                <isActive>false</isActive>
                <label>Tier 2</label>
            </value>
            <value>
                <fullName>Tier 3</fullName>
                <isActive>false</isActive>
                <label>Tier 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>