force-app/main/default/objects/CampaignMember/fields/Linkedin_Click_ID__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Click_ID__c</fullName>
    <label>Linkedin Click ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>