force-app/main/default/objects/CampaignMember/fields/Master_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Campaign_Name__c</fullName>
    <formula>Campaign.Masters_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Campaign Name</label>
    <type>Text</type>
</CustomField>