force-app/main/default/objects/CampaignMember/fields/Microsoft_MSCLKID__c.field-meta.xml
<CustomField>
    <fullName>Microsoft_MSCLKID__c</fullName>
    <inlineHelpText>Used to track Bing click ads for Growth</inlineHelpText>
    <label>Microsoft MSCLIKID</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>