force-app/main/default/objects/CampaignMember/fields/Owner_At_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Owner_At_Interaction__c</fullName>
    <description>Contact owner when inbound interaction happened</description>
    <label>Owner At Interaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>