force-app/main/default/objects/CampaignMember/fields/Owner_at_Interaction_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Owner_at_Interaction_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner at Interaction Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members1</relationshipName>
    <type>Lookup</type>
</CustomField>