force-app/main/default/objects/CampaignMember/fields/Owner_Role_Copy__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role_Copy__c</fullName>
    <description>Copy of owner role at initialization of campaign member</description>
    <label>Owner Role Copy</label>
    <length>250</length>
    <type>Text</type>
</CustomField>