force-app/main/default/objects/CampaignMember/fields/Parent_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign_Id__c</fullName>
    <formula>Campaign.ParentId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Campaign Id</label>
    <type>Text</type>
</CustomField>