force-app/main/default/objects/CampaignMember/fields/Personalization_Experiment_Id__c.field-meta.xml
<CustomField>
    <fullName>Personalization_Experiment_Id__c</fullName>
    <inlineHelpText>Used to track personalization of leads</inlineHelpText>
    <label>Personalization Experiment Id</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>