force-app/main/default/objects/CampaignMember/fields/Routed_Date__c.field-meta.xml
<CustomField>
    <fullName>Routed_Date__c</fullName>
    <description>Created Field as part of GTMS-25418
DATE field on Campaign Member to be populated directly from Leandata</description>
    <label>Routed Date</label>
    <type>DateTime</type>
</CustomField>