force-app/main/default/objects/CampaignMember/fields/Run_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Run_Round_Robin__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Choose whether this campaign member will go through round robin</description>
    <label>Run Round Robin</label>
    <type>Checkbox</type>
</CustomField>