force-app/main/default/objects/CampaignMember/fields/Slack_Notification_to_Owner__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notification_to_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sends a slack notification to the owner.</description>
    <label>Slack Notification to Owner</label>
    <type>Checkbox</type>
</CustomField>