force-app/main/default/objects/CampaignMember/fields/Third_Party_Vendor_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Vendor_Lead_ID__c</fullName>
    <label>Third Party Vendor Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>