force-app/main/default/objects/CampaignMember/fields/utm_campaign__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign__c</fullName>
    <description>Field gets populated from the utm parameters of the link the customer clicked to land on a samsara page. These values are stored as cookies for 60 days in case the customer doesn&apos;t convert right away.</description>
    <label>utm_campaign</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>