force-app/main/default/objects/CampaignMember/fields/utm_campaign_first_copy__c.field-meta.xml
<CustomField>
    <fullName>utm_campaign_first_copy__c</fullName>
    <description>This field gets populated from a workflow because utm_campaign can&apos;t be referenced on a formula (Text Long).</description>
    <label>utm_campaign_first_copy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>