force-app/main/default/objects/CampaignMember/fields/utm_creative__c.field-meta.xml
<CustomField>
    <fullName>utm_creative__c</fullName>
    <description>Created as part of GTMS-26160 ticket</description>
    <label>utm creative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>