force-app/main/default/objects/CampaignMember/fields/utm_device__c.field-meta.xml
<CustomField>
    <fullName>utm_device__c</fullName>
    <description>Created utm device as part of GTMS-26160 ticket</description>
    <label>utm device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>