force-app/main/default/objects/CampaignMember/fields/utm_ext_adset_id__c.field-meta.xml
<CustomField>
    <fullName>utm_ext_adset_id__c</fullName>
    <label>utm_ext_adset_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>