force-app/main/default/objects/CampaignMember/fields/utm_ext_campaign_id__c.field-meta.xml
<CustomField>
    <fullName>utm_ext_campaign_id__c</fullName>
    <description>Unique id from the ad campaign used to join object against the ad platform.</description>
    <label>utm_ext_campaign_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>