force-app/main/default/objects/CampaignMember/fields/utm_extensionid__c.field-meta.xml
<CustomField>
    <fullName>utm_extensionid__c</fullName>
    <description>Created utm extensionid as part of GTMS-26160 ticket</description>
    <label>utm extensionid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>