force-app/main/default/objects/CampaignMember/fields/utm_network__c.field-meta.xml
<CustomField>
    <fullName>utm_network__c</fullName>
    <description>Created utm network as part of GTMS-26160 ticket</description>
    <label>utm network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>