force-app/main/default/objects/CampaignMember/fields/utm_source__c.field-meta.xml
<CustomField>
    <fullName>utm_source__c</fullName>
    <description>Field gets populated from the utm parameters of the link the customer clicked to land on a samsara page. These values are stored as cookies for 60 days in case the customer doesn&apos;t convert right away.</description>
    <label>utm_source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>