force-app/main/default/objects/CampaignMember/fields/utm_source_last_v2__c.field-meta.xml
<CustomField>
    <fullName>utm_source_last_v2__c</fullName>
    <label>utm_source_last</label>
    <length>50</length>
    <type>Text</type>
</CustomField>